# Playground

./: .gitignore  CMakeLists.txt
MiniEngine/: CMakeLists.txt
MiniEngine/Include/MiniEngine/: Application.hpp
MiniEngine/Include/MiniEngine/Graphics/: Pipeline.hpp  Renderer.hpp  VulkanDevice.hpp  VulkanPipeline.hpp  VulkanRenderer.hpp  Window.hpp
MiniEngine/Source/: Application.cpp
MiniEngine/Source/Graphics/: VulkanDevice.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp  VulkanSynchronization.cpp  Window.cpp
VulkanTriangle/: CMakeLists.txt  VulkanDevice.cpp  VulkanDevice.hpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  Window.cpp  Window.hpp  compile_shaders.bat  main.cpp
VulkanTriangle/Resources/Shaders/: triangle.frag
VulkanTriangle/Sources/: Entrypoint.cpp
VulkanTriangle/shaders/: triangle.vert
